Kubernetes/Exercise_05_FastAPI_Deployment/my_fastapi_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-sentiment-analysis-deployment
  labels:
    app: my-sentiment-analysis-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-sentiment-analysis-api
  template:
    metadata:
      labels:
        app: my-sentiment-analysis-api
    spec:
      containers:
      - name: my-sentiment-analysis-api
        image: myfastapi
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
