Kubernetes/Exercise_05_FastAPI_Deployment/my_fastapi_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-sentiment-analysis-ingress
  annotations:
#    kubernetes.io/ingress.class: nginx
    spec.ingressClassName: traefik
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
        - path: /traefik
          pathType: Prefix
          backend:
            service:
              name: my-sentiment-analysis-service
              port:
                number: 8000
  defaultBackend:
    service:
      name: my-sentiment-analysis-service
      port:
        number: 8000
